--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/live-preview": "^4.6.27",
     "@contentful/rich-text-react-renderer": "^16.0.2",
     "contentful": "^11.7.6",
     "next": "15.3.5",
